adjust config name to match filename

--- a/avod/configs/pyramid_cars_with_aug_example.config
+++ b/avod/configs/pyramid_cars_with_aug_example.config
@@ -3,7 +3,7 @@
 
 model_config {
     model_name: 'avod_model'
-    checkpoint_name: 'pyramid_cars_example'
+    checkpoint_name: 'pyramid_cars_with_aug_example'
 
     input_config {
         bev_depth: 6
